# ChangeLog for net-libs/libmicrohttpd
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/libmicrohttpd/ChangeLog,v 1.82 2014/12/27 15:07:30 blueness Exp $

*libmicrohttpd-0.9.39 (27 Dec 2014)

  27 Dec 2014; Anthony G. Basile <blueness@gentoo.org>
  +libmicrohttpd-0.9.39.ebuild:
  Version bump

  24 Dec 2014; Anthony G. Basile <blueness@gentoo.org>
  -libmicrohttpd-0.9.32.ebuild, -libmicrohttpd-0.9.33.ebuild,
  -libmicrohttpd-0.9.34.ebuild, -libmicrohttpd-0.9.35.ebuild,
  -libmicrohttpd-0.9.36.ebuild:
  Remove older versions

  02 Nov 2014; Agostino Sarubbo <ago@gentoo.org> libmicrohttpd-0.9.37.ebuild:
  Stable for alpha, wrt bug #524760

  29 Oct 2014; Agostino Sarubbo <ago@gentoo.org> libmicrohttpd-0.9.37.ebuild:
  Stable for sparc, wrt bug #524760

  28 Oct 2014; Agostino Sarubbo <ago@gentoo.org> libmicrohttpd-0.9.37.ebuild:
  Stable for ia64, wrt bug #524760

  10 Oct 2014; Agostino Sarubbo <ago@gentoo.org> libmicrohttpd-0.9.37.ebuild:
  Stable for x86, wrt bug #524760

  09 Oct 2014; Agostino Sarubbo <ago@gentoo.org> libmicrohttpd-0.9.37.ebuild:
  Stable for amd64, wrt bug #524760

  08 Oct 2014; Anthony G. Basile <blueness@gentoo.org>
  libmicrohttpd-0.9.37.ebuild:
  Stable on arm/ppc/ppc64, bug #524760

*libmicrohttpd-0.9.38 (08 Oct 2014)

  08 Oct 2014; Anthony G. Basile <blueness@gentoo.org>
  +libmicrohttpd-0.9.38.ebuild:
  Version bump

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org>
  libmicrohttpd-0.9.32.ebuild, libmicrohttpd-0.9.33.ebuild,
  libmicrohttpd-0.9.34.ebuild, libmicrohttpd-0.9.35.ebuild,
  libmicrohttpd-0.9.36.ebuild, libmicrohttpd-0.9.37.ebuild:
  QA: drop trailing '.' from DESCRIPTION

*libmicrohttpd-0.9.37 (02 Jun 2014)

  02 Jun 2014; Anthony G. Basile <blueness@gentoo.org>
  +libmicrohttpd-0.9.37.ebuild:
  Version bump

*libmicrohttpd-0.9.36 (26 May 2014)

  26 May 2014; Anthony G. Basile <blueness@gentoo.org>
  +libmicrohttpd-0.9.36.ebuild:
  Version bump
