@@ -1,0 +1,12 @@
+DEFINED_PHASES=configure install
+DEPEND=ssl? ( dev-libs/libgcrypt:0 net-libs/gnutls ) test? ( ssl? ( >=net-misc/curl-7.25.0-r1[ssl] ) )
+DESCRIPTION=A small C library that makes it easy to run an HTTP server as part of another application
+EAPI=5
+HOMEPAGE=http://www.gnu.org/software/libmicrohttpd/
+IUSE=epoll messages ssl static-libs test
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86
+LICENSE=LGPL-2.1
+RDEPEND=ssl? ( dev-libs/libgcrypt:0 net-libs/gnutls )
+SLOT=0
+SRC_URI=mirror://gnu/libmicrohttpd/libmicrohttpd-0.9.40.tar.gz
+_md5_=0e3422a591bbbf9c2c53999c0a61b13d
