@@ -6,7 +6,8 @@ HOMEPAGE=http://www.zeromq.org
 IUSE=pgm test static-libs
 KEYWORDS=amd64 hppa ppc ppc64 x86 ~x86-fbsd ~amd64-linux ~x86-linux
 LICENSE=LGPL-3
+RDEPEND=!net-libs/cppzmq
 SLOT=0
 SRC_URI=http://download.zeromq.org/zeromq-2.2.0.tar.gz
 _eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	79b635d29abf0572d6a1b0dc8e63c0e4
-_md5_=790b112e0834aed7a961c979afcc3201
+_md5_=93a7ad2276b6f3dad9717590ed0adad4
