@@ -4,25 +4,27 @@ Hash: SHA256
 DIST libmicrohttpd-0.9.37.tar.gz 1168410 SHA256 a78cbcc050fb50f4ef4cf02709a3f8dd498e9230271b445fc3dbec4132b47cdc SHA512 dc4c7e743c170e873197ce1672b983d415c1cf7aab7649f42be30f8da09a88144c5ea72fa70de14345cbf58b40447b0c509ab83add5ee632ebf01ddc492f2ecf WHIRLPOOL 71a821ab32266b2fe726e5b2b745fd9fc8e07a330f1ca7689ad7a56651a18e0abd94d41bccfff1392d40fa9ea4b2ec23e53be1462a56311458f554fc789e35c6
 DIST libmicrohttpd-0.9.38.tar.gz 1195477 SHA256 8df2b4dd863c98799a4775a530d905363fbc02fec850af9094da890b28b9e721 SHA512 006c6ad1981d56655bad20a4ad09b9a6a11b44628f7cfbcd9fb7643ed0ba44930fa2d1b6cab5c38c28c8d3b2d2757e8f12657c13a60cdd0c4c1daff038945998 WHIRLPOOL 2c1ff2fc9fbd32d9476a61e74d91c9d440b2c300b04dc449782493fc2ef089dc6832f76c635a5eaf43a22d4daa86aae95ac67253b9f4e481b857d0ed83bdf2ac
 DIST libmicrohttpd-0.9.39.tar.gz 1205722 SHA256 4f937b6065c366d776be86b1d24b8fc400ebc7ea006a9d77c49a8f2f0cd7e373 SHA512 f7a526803fd5bbd28c817836340f91569542c3f8db6f04ffc8e60cf794cd5a7f1da3beda782fa80b2f6c07bb48cd09454c5bbcae1ad81b00f0df2985740a927a WHIRLPOOL a2dc5f2303bf7fd042d9f5ca58f946e0e506232870b00d7a7cb65127cc1769fdbc9a5b12145d47d7ab4d32d48ab6b311f320c350adbc071d18aae810156073c0
+DIST libmicrohttpd-0.9.40.tar.gz 1222222 SHA256 403d4d46a8690ad8382bd9f156be3eaf4e80869a75b39f03d48bbcb124c7b7a6 SHA512 69ac43a5fbed477b65c9abe8972a5a77ac03e28ffc9605a0b6c4a88d683ce58549b4599eda5706f48b4c5d98b53979265b4dbe153c2a0729d3ba354a61e23615 WHIRLPOOL 1bb3759b79c1add8c5944f961554437212d4200a165b4221bc718dab931567061bac44a739224a43bc8590fa087145d8128ba5ceb8636321966deb803d05a619
 EBUILD libmicrohttpd-0.9.37.ebuild 1180 SHA256 b342a5e5741b3b4239930a65df55838069e09128abdab0d010a6e09e439c6203 SHA512 1d5fcb56fdc89f2a444dddafbaa9ef0188d5e1647f93b193511cb1d554b74a34df1e8f3927e4c2bd6a2531adedfd73f38b679fa1c92bf30e74c6788c1c0dacb7 WHIRLPOOL 2aa85ca2172f8ce70e3970dd8d4f1c39c6f60dc073380bb4643172f258d4cd115208cd287eab13ae7767277f59d4baab16836fbb150db0fc64b007ddf94a09a4
 EBUILD libmicrohttpd-0.9.38.ebuild 1193 SHA256 c56da25880e61ee7ec8c6c8fc96f21b2fa77a8765d9bf33dabb78ef2895bac81 SHA512 ca8d1be83981261f01c22c669943997921a7c33946d064c5c1980d056286eb76c2ccfcf228943035bd1d57fde717fa18bfa8c5201fd2213bc5c6d6efefb097c8 WHIRLPOOL 9fb5efcf54a61769a7e56c6fa686e76de3447c440f3a21686d37b65c56c46f622922d7761fd9ae92fe720953747dbadf74ff8cacfd12c459f4633c1f6013ce2d
 EBUILD libmicrohttpd-0.9.39.ebuild 1193 SHA256 818132552ded478c27cb51c7966a55585a8c1725253b224cb12b37a0cdcc55e0 SHA512 e51660141b263ef43b6023090d08868c42a58535c8435c4e04e092eb000e428ea983b38d9e41c6b9f7139bf2570825fbb42bbc977b65de5a7a95b74376071cc0 WHIRLPOOL 247f68f803186faf8c3d4be6e4110fcbb2c10c387b3e01ff4123fa765ead619cc3b0111c16f8f53ba458d6f6bf34b0ed8bd7b3593eaa0d886da07276ce2243c4
-MISC ChangeLog 11984 SHA256 14b3b2e2466f7f6ed1bb586dfb8abd4ae69bba96dc29431ea0528ca94af4ffa6 SHA512 8bbb52bcdc07d3692925bc29d0a74af96e7b77b21f17c4a6491e623b73d7fbaac1a0dc769c0522afdadb0c88f5c83d4b7fc7d29058e3f3b8c2a60eb39ac21848 WHIRLPOOL 65123dda49377c884267774be946323d452039868d563e7cbf9772f418a76fd031616cf8e64454c9988883948d7114f6f2a7b5ace3bdbdabd8d6945c91909de1
+EBUILD libmicrohttpd-0.9.40.ebuild 1193 SHA256 b6e8d536d3a9db459b6e49c5d78d15c4030898be8a26b2c9918c5b7880378266 SHA512 0d3d8c1a0069be03103ba4e4b52130c7541e49908378f232794dcc623f8e0e00cfa5d0cdc9ba33528af0e92c76187a02c490a8f19ca2bb20af281686980ba192 WHIRLPOOL 997f1c40520cdaac06ec7fe27cf6b8b3d98d2e17c6db72f6658077da50394d758473ee5a241e4cf51b7ac6d598cba0fc92303a230bd28ec74e6bf39175454730
+MISC ChangeLog 12125 SHA256 40bf243769563a88ff43acf3aa52d63e2aeaad4dd2fd5704a5a5f0199b6e6ffc SHA512 9432f4e8122f3668848b6f54f452e9b739881a8e7b170d7ad8e9a3f06fc5362337dcdd88b62e2520a3cb443e5363ae73c37bf3bf648ff4b0d9470f12aaddf5aa WHIRLPOOL 5f1f17118acf53dcf1286bd9347f1b5207d6b0a3fe810cce2832501c3cf05aee092a9102a348df29a77230e5f824701b4b665047a441a159fc379874369c749d
 MISC metadata.xml 359 SHA256 99f8013d4996905dc53e27191e9fff66c21e3b3ae2a912f14b9881b52689fcee SHA512 28d6502d6a724c5f63ab3c9b0917c7e513463b533bef7daa4c50256a6c1cf6c026897b21016f26eb2eaf999ed0b4c7561c9d59e6dcd33ef950466d394f9aacbe WHIRLPOOL bc31516b0cd0fa502b3463dbad6d7a5240f0d427086cde4189dd7cf6b3b1e58ca710398ebd4be4183e7f390dfb1420158d9758fabc8882abb45ef4b9bed8fc30
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUnstnAAoJEJOE+m71LUu6slYP+QGzhBGt5HlBQRcdElKM+TN+
-LnIndavPAZjHRYk+Lh77MbFhQWL2mVLtexEQ4m6EZQvfqIImRStqyz9sa8LIXBNE
-qT7BdJ9KbWJ523xVzXipY/c9NcGXQUorzXJ3Z+2xsrcTS3B4Xpfr4MWL0KQMk50k
-Oy+yWPMxs/96/F2eFxQGmzjqooC80evxwW7+scH2Aq71li8dyskNnK2pgWL20gm1
-6Jc4YKo0MaX+QKEUmn+iZWlt0jkRibwmurSLcQ7C0xh2Shqijcq0mGyhKgAc8NDk
-79PfQAAzrirpuVG8n48xKBVvWdM+1iPF2x1gd1UHOuOAsvunIOx/cjfHk85YvBIv
-3q1pT9QE0jn3xyqvKr+wUeHr4Ik9eEZ85/1yMfZ+qzD89QwyW4vW1yA3QwRnHGUM
-nDeDPemp9TQJ41w/U8pAJjnWYYd830PAb3/G0Su3UgOfDxO35BE0a/Dx0jrdLOWH
-Xs19w/ZI9kGWLRwjHB1V+UacmItFaSO+wTXSKuUAkk6XfuQcRV5zLRlGFLLhpn5N
-JVsqKdAWVBx1R9aaF8CIXg+0rRDWtGlgz+roLgzAoHuroEcN84XkSVqFYQ9DutKb
-poQOmeelo8dH+EYdbZiGM2XqIR/UVUF31AkJo39WoB10RGcC/rHQOk8HzFUzGglX
-VfaeH0ZT6dNiOUJmOXi4
-=bcBk
+iQIcBAEBCAAGBQJVI74eAAoJEJOE+m71LUu6AmYP/A1otAZ30sUI/yEyn2/KD6+a
+x6fSfytzX3HWqY1QoSC8b2B34tTe+E7TUSObIJaKcj5xK96QVtDUbnSJTv20QgIG
+vtumCDa0ClwJ+Ts/wSEPQjuW+MgB1WqoocK5WHLWu1GPINQX3jATgaXaiywk6ZOE
+c4vJoEemmNtco83ocqhp6miAYPCtbeDj46k/4oO0gAhDzoOZqd/dC1f3KndgR8xS
+mrQe61NKKwe5y1LoYAphc/AESDSuEzPXJcF+/VQMlN3mR/A3BwZmby2vkA3eQbxj
+ey7lt7sazqL84TDYYsyGdFU9oVTACNY11lxdthXlYdVDowFymmRaoBhrGLBqws1T
+e9yRfkUmKLFB8U1usjsbRFFB6g6YTGj4us9e0MD6626gRTJzXXLu1f6PE+f0kE6Y
+2Ulgsotq4BsfVD+Znlo8+2jsdeVp9aKqmcWHXnT69JUXI1Dr5+zjOr8FK1Rt53jg
+05UKO0rVkQ1rWj1zQAFnMe6xF5dYnndol4fKwuGVuHiU+VLetKY7IvBVv1CUK5uP
+QT8m0XYfLM60As7K9QiHzdipAt9rtFds86m9hF+ywkPQB0dJJkkolWeXbacjmr2m
+OijK350YwwgVNgv63yArcQnjjvrb9VzHgDKV5WWEF+EYLCohwcMT0xOh8jORDHri
+ZPDL9Arndd8bCB+ELzXt
+=ezUf
 -----END PGP SIGNATURE-----
