@@ -5,27 +5,27 @@ AUX zeromq-3.2.3-unused-variable.patch 4012 SHA256 f80558d4bd5557128d2ebb44d075f
 DIST zeromq-2.2.0.tar.gz 1899104 SHA256 6e2f4183e5259eeb67025b00116d900491fb71581e8e085373b51c3bc9571ae1 SHA512 fb3cf421b2dc48c31956b3e3ee4ab6ebc743deec3bf626c2238a1996c8c51be87260bd6aa662793a1f0c34dcda9b3146763777bb162dfad6fec4ca7acc403b2e WHIRLPOOL b35a6f0cdcff34ec188c989354fb53ee44f22ebb8d830f904447b4fa32ddd17de157998c2733a42ff0a6c1355f0ab2e0639e7666c7e983839e1dbde2188dcef5
 DIST zeromq-3.2.3.tar.gz 2072758 SHA256 e134c1aaf829dd77bca9dc0fa199ba31095a581bd0d3dda5fc59523b9f401238 SHA512 34ffb6aa645f62bd1158a8f2888bf92929ccf90917a6c50ed51ed1240732f498522e164d1536f26480c87ad5457fe614a93bf0e15f2f89b0b168e64a30de68ca WHIRLPOOL 14ba025abe6db59d6e8d1dd9df23f88e0171721bb046b9e2cf0cd7a5a6e9034980808d346fe10e755e367302cfbb670912576071345233148711815237fa176e
 DIST zeromq-4.0.5.tar.gz 2153667 SHA256 3bc93c5f67370341428364ce007d448f4bb58a0eaabd0a60697d8086bc43342b SHA512 0d928ed688ed940d460fa8f8d574a9819dccc4e030d735a8c7db71b59287ee50fa741a08249e356c78356b03c2174f2f2699f05aa7dc3d380ed47d8d7bab5408 WHIRLPOOL 6fc32962e38b47dd93c31da797db457e3c283e44e4b6f59fae5fd6eb6127840906f030140b63623f96d0d86a922b5274201e3a1ebee4a369d1b52ca04c554bbb
-EBUILD zeromq-2.2.0.ebuild 1404 SHA256 c73508b0e8833779790e9923618a2f716e4f6a9e4989a722165eddaea505e53d SHA512 414e3088a4e123e4990ff03abe44edca16de97723f26cacd160a28a410a1e1ade729a7cd09efcb88a0d6721825986ffd767d515334bf6e3ee33da615fd13a7fe WHIRLPOOL d593defd8b68741f73a442d46bd5e426d4cb0a58d13d998301e0288188c9e5442fea535467160b70cef282fc34f788e173808c9fcc0b2734f448c181e155b390
+EBUILD zeromq-2.2.0.ebuild 1418 SHA256 ef6b097f03d4963c40ad2af6d163da586747c28b70cf3585f6f0f100d3522fe1 SHA512 a0c333e3654e3dd10bfa2ec30f0d3292a7a1cbaa91bbbd7c0fa4aab732408aa8b9abd002323b904ce7a0fc2d09613a2ceeb1d09c9fcdaa0646346e3aaf14574e WHIRLPOOL d3654397a45358b13475f99018db6d32f8a9dfe610adcd3a278dde4a9da6697fe8a6da35a32e168ffa30a3590ea3ef87bddcf3fa9320581af79a036c7eaf2000
 EBUILD zeromq-3.2.3.ebuild 1716 SHA256 112a941a11a42fd1992ba9971cc0e8fb4afda2a95ca19627cbb3c775a2ec9a87 SHA512 01367c503193b6a48d2f76663fd539a952c0a28a303db223a5e9c37419060d30370891440428bd48af7aef87b4ec59ab549add5c8e0ae19b0208b1bdf4bb4d53 WHIRLPOOL db2e3a5cbe65dda171c95386a4c278bc5825c13b6a1606602e44281727f84b71bde81d5eed6c75c027d0e29989599ef42d1e9fbad57f327289992580631112a6
 EBUILD zeromq-4.0.5.ebuild 1148 SHA256 5ca8d878df7db980c2e73fe3ae80032da7b4cc4e099a62f0b2ae76288e423056 SHA512 997fd65cccc859f48bcdd9611c0fc30584408744dbcccdd6f8fb1dbe3e65032d599ab05aa14803e70795261cb7a5cf0fa4a9b972cb9c0c0449f4be0c9ba0298e WHIRLPOOL af1a502f5666be1f67c119549fc8e8b44e13f5a102135ba9cb14815f741132456d11755259fcb2e36915b087e1fe14b5132d6b48e9bfaa108df12c3236a29e56
-MISC ChangeLog 8731 SHA256 eb0bd0932cda8606874ee82ae5ef3f665239740c7085352e1dd10d9a118f7081 SHA512 bc3b28e3338f53e9dfcdc4f4c96a4a2d1268cdabb8298d2d506a956b113d5bbea789bbbd02a41dc8aa36e8cd094520e54700619666261662d083083cd288c779 WHIRLPOOL 7729ca398d909c44de2a235f9a457a209b0dbecb5d4f0602eba36711d335b53642830454b86efa97ff0475291d417bf9378e8204893f88631fc06f87489855bf
+MISC ChangeLog 8859 SHA256 e55f17b193c71f35fe37520674f9f790f5229609d0449d31131cc0a9010283a4 SHA512 5508fcdc9a4ce4972a8f3d8d6c0f66dcf8e7827c95ada5a760c551d8c817a029ce09438acb41bbc72ae9e4500e24a7f1afd19a0b695e52d171a1869064f20854 WHIRLPOOL ad6aa65b969745d789f323b605fd9811060520506422be2f01d5a815226f9fb477fb3afd2fb16c37ca16bc3b31fedcd07dce3f5c159b02f4f27317b9f37004e7
 MISC metadata.xml 1209 SHA256 d06047a6724ec60967cf4f3a8b06a2c9dbeacadad7d2173c9ed57d8ab135c14f SHA512 ecf94c881c6ae3a35c856a30129240b90b70eeadea44dce1c0c9290d713d8a4f1d2b4587e86351a3ab5e32d26474307ec30297453bbdd72707643ee7332725b5 WHIRLPOOL cab7706c40c6c396141d5d4e3038e68ab248b5d9089fce21f872d5d5d0f7e14a45f7b6faf402181ddb8ce9f797958d5eb5f369fc13e499ce1b75a250fcbf36a0
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCgBmBQJU2y9dXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCgBmBQJVI7vwXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirhPAP/jdQYeKo8rwXTUj/ItOoejrI
-cMD0vX0OdouH0xbd4T6szYPEcdihb5V7mshOgozwgVNjm2Jomdoj4bIP9C0x161o
-0ANo6JmunUdWBbCVzYmcfabrZfWwEAyRoyWHPdjZCrAeey7HNmsP5zmelGFUp84F
-WLPFILDoZ7t2mlWq0cwOOyhvSIWjlUPDRoQXLUKy0DqgxOd/l7xYHf4eLu6qS2Tz
-gaayN9SwamCydzaRa3hUWZ3OAgY5J2hcEUHRJHnt9NG9IshcVCJVD9AkAJnoEF4U
-RRy9Yavvr2esSCPciyABfjHeUWhRi4UVW200HBHoBjXVjaGN7ohENIy8vM6WLVOJ
-u/HwZeAW/y6o2XA73aPf3SvmO4APLqUN5ikYBMe2/rHW2jPu0f8a5kTdOyGRi8h2
-l8cA0Qn55QgAYOVmTceU/3sTietOpPgzi2WdtzUrCS18bY62Btk2S+5HN4m/Krz6
-4uBBsM5l2IBm584hnidhohpSjPUE0Ib7RZv9CiWM08C+B4WxypfyVtXB0psJ1xvQ
-FfDAAJqTwuE4KThuBw9UG5ECkFUnlJHhgacnMwK+5rtv0IdEeBFm5Yer2Ya/8QBs
-um7K0Yz5VOFdvfHvk2Pl8s4fUucpYf5wjjcrCzky2wHSdDWK0EgQ6e5FHQrX58O8
-ld7eLyNQmysHwR5VPmrV
-=NAwL
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirRMEP/38ohM4Acx5bcVu0W+mBjrwx
+aEcg8y1vHeHiWFoE60OkM4LTRHG5RVWumfO4LICLtPjDVf+JjaumkQ7tb3f6sWIY
+q6AJq/FlwnDpCwpSmCkykzf/OfXoOZqswzaidRglYqfZYsF3SeWEFxZw7UzpB8Wk
+iTKtzSp/ZOpTd9UvqqYZknbXGv/IGlB/wSEwSd4QgihWwKGBYmymupyzwdT1XpsJ
+dY9PsoeExBVhx7Ox4mup+LYvuXqf5hCjIPxOLy6tkCEcyk3bu3uehSO1OrBA8QH/
+zAOF/ibkkWLbFB0cW0p0zYNAEGqMYqbuyERphJDoA4BcJmANbq0RVBhOEJhbLBox
+GXccVNIPFZ+dMbrkt7kCvp90a3S8WtUKRjiuCiBBevrDVs1RJrPMomWczxXkUyBv
+trWErpmmCQ4a8iNFckEXrXsClNIKQnR7hVbTu8PJaAYqFFyzScknxfezurjk85WY
+mvSUyix8fy+1iJchB3tjqqqzrD1XqiXp4TCO/uqVQyMfLDdnPYcQhyb0zuNSAKWJ
+fLJ/QxBBgTBaPunIzl9hoDpLhiqcakW5ElddbIRQ9ITkd35X82G/hit+xeZY1Me3
+rXBV3BOXPq+EwfXkIB1x2V2lJh+tLiNPpPEGZC7GcU56ej6ckAFZgXPg8QqbFPq7
+K4xT/ZrP4657SZVCsSj/
+=J08e
 -----END PGP SIGNATURE-----
