@@ -1,6 +1,12 @@
 # ChangeLog for net-libs/libmicrohttpd
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libmicrohttpd/ChangeLog,v 1.82 2014/12/27 15:07:30 blueness Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libmicrohttpd/ChangeLog,v 1.83 2015/04/07 11:21:05 blueness Exp $
+
+*libmicrohttpd-0.9.40 (07 Apr 2015)
+
+  07 Apr 2015; Anthony G. Basile <blueness@gentoo.org>
+  +libmicrohttpd-0.9.40.ebuild:
+  Version bump.
 
 *libmicrohttpd-0.9.39 (27 Dec 2014)
 
